--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Copy Me</title>
-    <link rel="stylesheet" href="https://use.typekit.net/ksg4hwn.css" />
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Voronina</title>
+    <link rel="stylesheet" href="css/main.css" />
+    <script src="js/script.js" defer></script>
   </head>
-
   <body>
-    <div class="wrapper"></div>
+    <div class="wrapper">
+      <div class="site-top">
+        <header class="header">
+          <picture class="logo">
+            <source media="(min-width: 1400px)" srcset="img/logo-desktop.jpg" />
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.jpg" />
+            <img
+              class="logo__img"
+              src="img/logo-mobile.jpg"
+              width="112"
+              height="33"
+              alt="Логотип магазина."
+            />
+          </picture>
+
+          <nav class="nav js-nav">
+            <button
+              class="close-menu js-close-menu"
+              aria-label="close menu"
+            ></button>
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="#portfolio">Портфолио</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#about">Обо мне</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#price">Стоимость</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#contacts">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+          <button class="open-menu js-open-menu" aria-label="open menu">
+            <span class="open-menu__line open-menu__line-1"></span>
+            <span class="open-menu__line open-menu__line-2"></span>
+            <span class="open-menu__line open-menu__line-3"></span>
+          </button>
+        </header>
+
+        <div class="container">
+          <div class="intro">
+            <h1 class="intro__title">Дарья Воронина</h1>
+            <p class="intro__text">
+              Food — фотограф и food — стилист в Киеве и Киевской области.
+            </p>
+            <a class="intro__link" href="#portfolio">Портфолио</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
