--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -43,20 +43,29 @@
               </li>
             </ul>
           </nav>
+
           <button class="open-menu js-open-menu" aria-label="open menu">
             <span class="open-menu__line open-menu__line-1"></span>
             <span class="open-menu__line open-menu__line-2"></span>
             <span class="open-menu__line open-menu__line-3"></span>
           </button>
+
+          <a class="phone" href="tel:+380554447799">+38 055 444 77 99</a>
         </header>
 
         <div class="container">
-          <div class="intro">
+          <div class="site-top__intro intro">
             <h1 class="intro__title">Дарья Воронина</h1>
             <p class="intro__text">
               Food — фотограф и food — стилист в Киеве и Киевской области.
             </p>
             <a class="intro__link" href="#portfolio">Портфолио</a>
+          </div>
+
+          <div class="top-soc">
+            <a class="top-soc__link" href="#">Instagram</a>
+            -
+            <a class="top-soc__link" href="#">Facebook</a>
           </div>
         </div>
       </div>
