--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <div class="site-top">
         <header class="header">
-          <picture class="logo">
+          <picture class="header__logo logo">
             <source media="(min-width: 1400px)" srcset="img/logo-desktop.jpg" />
             <source media="(min-width: 768px)" srcset="img/logo-tablet.jpg" />
             <img
@@ -29,7 +29,7 @@
               aria-label="close menu"
             ></button>
             <ul class="nav__list">
-              <li class="nav__item">
+              <li class="nav__item nav__item--portfolio">
                 <a class="nav__link" href="#portfolio">Портфолио</a>
               </li>
               <li class="nav__item">
@@ -68,6 +68,15 @@
             <a class="top-soc__link" href="#">Facebook</a>
           </div>
         </div>
+
+        <ul class="site-top__position position">
+          <li class="position__item position__item--current">01</li>
+          <li class="position__item"></li>
+          <li class="position__item"></li>
+          <li class="position__item"></li>
+          <li class="position__item"></li>
+          <li class="position__item"></li>
+        </ul>
       </div>
     </div>
   </body>
