Make portfolio section - mobile

--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -78,6 +78,238 @@
           <li class="position__item"></li>
         </ul>
       </div>
+
+      <section class="section portfolio">
+        <div class="container">
+          <h2 class="section__title">Портфолио</h2>
+          <div class="works">
+            <div class="works__box">
+              <article class="works__item work-item">
+                <picture class="work-item__picture">
+                  <source
+                    type="image/webp"
+                    media="(min-width: 1440px)"
+                    srcset="
+                      img/work-1-desktop@1x.webp 1x,
+                      img/work-1-desktop@2x.webp 2x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    media="(min-width: 768px)"
+                    srcset="
+                      img/work-1-tablet@1x.webp 1x,
+                      img/work-1-tablet@2x.webp 2x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/work-1-mobile@1x.webp 1x,
+                      img/work-1-mobile@2x.webp 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1440px)"
+                    srcset="
+                      img/work-1-desktop@1x.jpg 1x,
+                      img/work-1-desktop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      img/work-1-tablet@1x.jpg 1x,
+                      img/work-1-tablet@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    class="work-item__image"
+                    src="img/work-1-mobile@1x.jpg"
+                    srcset="img/work-1-mobile@2x.jpg 2x"
+                    alt="Натюрморт"
+                  />
+                </picture>
+                <span class="work-item__hash-tag">#соцсети</span>
+                <h3 class="work-item__title">
+                  Фото контент для социальных сетей кондитерской &laquo;Леди
+                  Мармелад&raquo;
+                </h3>
+              </article>
+            </div>
+            <div class="works__box">
+              <article class="works__item work-item">
+                <picture class="work-item__picture">
+                  <source
+                    type="image/webp"
+                    media="(min-width: 1440px)"
+                    srcset="
+                      img/work-2-desktop@1x.webp 1x,
+                      img/work-2-desktop@2x.webp 2x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    media="(min-width: 768px)"
+                    srcset="
+                      img/work-2-tablet@1x.webp 1x,
+                      img/work-2-tablet@2x.webp 2x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/work-2-mobile@1x.webp 1x,
+                      img/work-2-mobile@2x.webp 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1440px)"
+                    srcset="
+                      img/work-2-desktop@1x.jpg 1x,
+                      img/work-2-desktop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      img/work-2-tablet@1x.jpg 1x,
+                      img/work-2-tablet@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    class="work-item__image"
+                    src="img/work-2-mobile@1x.jpg"
+                    srcset="img/work-2-mobile@2x.jpg 2x"
+                    alt="Натюрморт"
+                  />
+                </picture>
+                <span class="work-item__hash-tag">#соцсети</span>
+                <h3 class="work-item__title">
+                  Фото контент для инстаграма ресторана &laquo;Funky Food&raquo;
+                </h3>
+              </article>
+              <article class="works__item work-item">
+                <picture class="work-item__picture">
+                  <source
+                    type="image/webp"
+                    media="(min-width: 1440px)"
+                    srcset="
+                      img/work-3-desktop@1x.webp 1x,
+                      img/work-3-desktop@2x.webp 2x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    media="(min-width: 768px)"
+                    srcset="
+                      img/work-3-tablet@1x.webp 1x,
+                      img/work-3-tablet@2x.webp 2x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/work-3-mobile@1x.webp 1x,
+                      img/work-3-mobile@2x.webp 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1440px)"
+                    srcset="
+                      img/work-3-desktop@1x.jpg 1x,
+                      img/work-3-desktop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      img/work-3-tablet@1x.jpg 1x,
+                      img/work-3-tablet@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    class="work-item__image"
+                    src="img/work-3-mobile@1x.jpg"
+                    srcset="img/work-3-mobile@2x.jpg 2x"
+                    alt="Натюрморт"
+                  />
+                </picture>
+                <span class="work-item__hash-tag">#менюресторана</span>
+                <h3 class="work-item__title">
+                  Съемка меню ресторана &laquo;Хорошая еда&raquo;
+                </h3>
+              </article>
+            </div>
+            <div class="works__box">
+              <article class="works__item work-item">
+                <picture class="work-item__picture">
+                  <source
+                    type="image/webp"
+                    media="(min-width: 1440px)"
+                    srcset="
+                      img/work-4-desktop@1x.webp 1x,
+                      img/work-4-desktop@2x.webp 2x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    media="(min-width: 768px)"
+                    srcset="
+                      img/work-4-tablet@1x.webp 1x,
+                      img/work-4-tablet@2x.webp 2x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/work-4-mobile@1x.webp 1x,
+                      img/work-4-mobile@2x.webp 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1440px)"
+                    srcset="
+                      img/work-4-desktop@1x.jpg 1x,
+                      img/work-4-desktop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      img/work-4-tablet@1x.jpg 1x,
+                      img/work-4-tablet@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    class="work-item__image"
+                    src="img/work-4-mobile@1x.jpg"
+                    srcset="img/work-4-mobile@2x.jpg 2x"
+                    alt="Натюрморт"
+                  />
+                </picture>
+                <span class="work-item__hash-tag">#рекламная съемка</span>
+                <h3 class="work-item__title">
+                  Съемка для баннерной рекламной печати ресторана
+                  &laquo;Бранч&raquo;
+                </h3>
+              </article>
+            </div>
+          </div>
+        </div>
+        <div class="portfolio-details">
+          <div class="portfolio-details__content">
+            <h3 class="portfolio-details__title">Подробное портфолио</h3>
+            <p class="portfolio-details__text">
+              С описанием задач заказчика, полного процесса работы и финальным
+              результатом
+            </p>
+            <div class="portfolio-details__download">
+              <a class="portfolio-details__link" href="#">Скачать в PDF</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
