Make portfolio section - tablet

--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -83,7 +83,7 @@
         <div class="container">
           <h2 class="section__title">Портфолио</h2>
           <div class="works">
-            <div class="works__box">
+            <div class="works__box works__box-1">
               <article class="works__item work-item">
                 <picture class="work-item__picture">
                   <source
@@ -137,7 +137,7 @@
                 </h3>
               </article>
             </div>
-            <div class="works__box">
+            <div class="works__box works__box-2">
               <article class="works__item work-item">
                 <picture class="work-item__picture">
                   <source
@@ -241,7 +241,7 @@
                 </h3>
               </article>
             </div>
-            <div class="works__box">
+            <div class="works__box works__box-3">
               <article class="works__item work-item">
                 <picture class="work-item__picture">
                   <source
@@ -305,7 +305,9 @@
               результатом
             </p>
             <div class="portfolio-details__download">
-              <a class="portfolio-details__link" href="#">Скачать в PDF</a>
+              <a class="portfolio-details__link" href="#" download>
+                Скачать в PDF
+              </a>
             </div>
           </div>
         </div>
