Make portfolio section - desktop

--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -297,6 +297,7 @@
             </div>
           </div>
         </div>
+
         <div class="portfolio-details">
           <div class="portfolio-details__content">
             <h3 class="portfolio-details__title">Подробное портфолио</h3>
@@ -310,6 +311,21 @@
               </a>
             </div>
           </div>
+        </div>
+
+        <ul class="portfolio__position position">
+          <li class="position__item"></li>
+          <li class="position__item position__item--current">02</li>
+          <li class="position__item"></li>
+          <li class="position__item"></li>
+          <li class="position__item"></li>
+          <li class="position__item"></li>
+        </ul>
+
+        <div class="portfolio__side-soc side-soc">
+          <a class="side-soc__link" href="#">Instagram</a>
+          -
+          <a class="side-soc__link" href="#">Facebook</a>
         </div>
       </section>
     </div>
