--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -328,6 +328,33 @@
           <a class="side-soc__link" href="#">Facebook</a>
         </div>
       </section>
+
+      <section class="section about">
+        <div class="container">
+          <h2 class="section__title">Обо мне</h2>
+          <div class="about__content">
+            <div class="about__box">
+              <p class="about__text">
+                Во всех фотосъемках еды, я работаю как фуд-фотограф и
+                фуд-стилист. Создаю креативные концепции, реализую ваши идеи.
+                Разрабатываю рецепты, вкусно снимаю. Провожу обучение
+              </p>
+              <p class="about__text about__text--desktop">
+                Всегда открыта к сотрудничеству и рада новым предложениям
+              </p>
+            </div>
+            <div class="about__box">
+              <div class="about__contacts">
+                <a href="tel:+380554447799">+38 055 444 77 99</a>
+                <a href="mailto:daria.voronina@gmail.com"
+                  >daria.voronina@gmail.com</a
+                >
+              </div>
+              <a class="about__link" href="#">Работать со мной</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
