--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -343,7 +343,7 @@
                 Всегда открыта к сотрудничеству и рада новым предложениям
               </p>
             </div>
-            <div class="about__box">
+            <div class="about__box about__box--right">
               <div class="about__contacts">
                 <a href="tel:+380554447799">+38 055 444 77 99</a>
                 <a href="mailto:daria.voronina@gmail.com"
