Make about section - desktop

--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -354,6 +354,21 @@
             </div>
           </div>
         </div>
+
+        <ul class="about__position position">
+          <li class="position__item"></li>
+          <li class="position__item position__item--current">02</li>
+          <li class="position__item"></li>
+          <li class="position__item"></li>
+          <li class="position__item"></li>
+          <li class="position__item"></li>
+        </ul>
+
+        <div class="about__side-soc side-soc">
+          <a class="side-soc__link" href="#">Instagram</a>
+          -
+          <a class="side-soc__link" href="#">Facebook</a>
+        </div>
       </section>
     </div>
   </body>
