Make price section - mobile

--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -370,6 +370,194 @@
           <a class="side-soc__link" href="#">Facebook</a>
         </div>
       </section>
+
+      <section class="section price">
+        <div class="container">
+          <h2 class="section__title">Стоимость</h2>
+          <ul class="plans">
+            <li class="plans__item">
+              <article class="plan-item">
+                <picture class="plan-item__picture">
+                  <source
+                    type="image/webp"
+                    media="(min-width: 1440px)"
+                    srcset="
+                      img/plan-1-desktop@1x.webp 1x,
+                      img/plan-1-desktop@2x.webp 2x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    media="(min-width: 768px)"
+                    srcset="
+                      img/plan-1-tablet@1x.webp 1x,
+                      img/plan-1-tablet@2x.webp 2x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/plan-1-mobile@1x.webp 1x,
+                      img/plan-1-mobile@2x.webp 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1440px)"
+                    srcset="
+                      img/plan-1-desktop@1x.jpg 1x,
+                      img/plan-1-desktop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      img/plan-1-tablet@1x.jpg 1x,
+                      img/plan-1-tablet@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    class="plan-item__image"
+                    src="img/plan-1-mobile@1x.jpg"
+                    srcset="img/plan-1-mobile@2x.jpg 2x"
+                    alt="Натюрморт"
+                  />
+                </picture>
+                <h3 class="plan-item__title">
+                  <span class="plan-item__title-hours">12 часов съемки</span>
+                  <span class="plan-item__title-price">- 10 000 гривен</span>
+                </h3>
+                <ul class="plan-item__list">
+                  <li>Подготовка к съемке от 1 недели</li>
+                  <li>Предварительный дизайн — проект</li>
+                  <li>Food - стилизация</li>
+                  <li>Расширенный реквизит</li>
+                  <li>Цветокоррекция и пост-обработка</li>
+                  <li>Результаты в течение 3-х дней</li>
+                </ul>
+              </article>
+            </li>
+            <li class="plans__item">
+              <article class="plan-item">
+                <picture class="plan-item__picture">
+                  <source
+                    type="image/webp"
+                    media="(min-width: 1440px)"
+                    srcset="
+                      img/plan-2-desktop@1x.webp 1x,
+                      img/plan-2-desktop@2x.webp 2x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    media="(min-width: 768px)"
+                    srcset="
+                      img/plan-2-tablet@1x.webp 1x,
+                      img/plan-2-tablet@2x.webp 2x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/plan-2-mobile@1x.webp 1x,
+                      img/plan-2-mobile@2x.webp 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1440px)"
+                    srcset="
+                      img/plan-2-desktop@1x.jpg 1x,
+                      img/plan-2-desktop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      img/plan-2-tablet@1x.jpg 1x,
+                      img/plan-2-tablet@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    class="plan-item__image"
+                    src="img/plan-2-mobile@1x.jpg"
+                    srcset="img/plan-2-mobile@2x.jpg 2x"
+                    alt="Натюрморт"
+                  />
+                </picture>
+                <h3 class="plan-item__title">
+                  <span class="plan-item__title-hours">4 часа съемки</span>
+                  <span class="plan-item__title-price">- 5 000 гривен</span>
+                </h3>
+                <ul class="plan-item__list">
+                  <li>Подготовка к съемке — 1 день</li>
+                  <li>Food — стилизация</li>
+                  <li>Использование реквизита</li>
+                  <li>Цветокоррекция и постобработка</li>
+                  <li>Результаты в течение 3-х дней</li>
+                </ul>
+              </article>
+            </li>
+            <li class="plans__item">
+              <article class="plan-item plan-item--last">
+                <picture class="plan-item__picture">
+                  <source
+                    type="image/webp"
+                    media="(min-width: 1440px)"
+                    srcset="
+                      img/plan-3-desktop@1x.webp 1x,
+                      img/plan-3-desktop@2x.webp 2x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    media="(min-width: 768px)"
+                    srcset="
+                      img/plan-3-tablet@1x.webp 1x,
+                      img/plan-3-tablet@2x.webp 2x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/plan-3-mobile@1x.webp 1x,
+                      img/plan-3-mobile@2x.webp 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1440px)"
+                    srcset="
+                      img/plan-3-desktop@1x.jpg 1x,
+                      img/plan-3-desktop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      img/plan-3-tablet@1x.jpg 1x,
+                      img/plan-3-tablet@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    class="plan-item__image"
+                    src="img/plan-3-mobile@1x.jpg"
+                    srcset="img/plan-3-mobile@2x.jpg 2x"
+                    alt="Натюрморт"
+                  />
+                </picture>
+                <h3 class="plan-item__title">
+                  <span class="plan-item__title-hours">1 час съемки</span>
+                  <span class="plan-item__title-price">- 1 500 гривен</span>
+                </h3>
+                <ul class="plan-item__list">
+                  <li>Food - стилизация</li>
+                  <li>Использование реквизита</li>
+                  <li>Цветокоррекция</li>
+                  <li>Результаты в течение 5-и дней</li>
+                </ul>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
     </div>
   </body>
 </html>
