Make price section - tablet

--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -375,7 +375,7 @@
         <div class="container">
           <h2 class="section__title">Стоимость</h2>
           <ul class="plans">
-            <li class="plans__item">
+            <li class="plans__item plans__item-1">
               <article class="plan-item">
                 <picture class="plan-item__picture">
                   <source
@@ -436,7 +436,7 @@
                 </ul>
               </article>
             </li>
-            <li class="plans__item">
+            <li class="plans__item plans__item-2">
               <article class="plan-item">
                 <picture class="plan-item__picture">
                   <source
@@ -496,7 +496,7 @@
                 </ul>
               </article>
             </li>
-            <li class="plans__item">
+            <li class="plans__item plans__item-3">
               <article class="plan-item plan-item--last">
                 <picture class="plan-item__picture">
                   <source
