Make price section - desktop

--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -557,6 +557,21 @@
             </li>
           </ul>
         </div>
+
+        <ul class="price__position position">
+          <li class="position__item"></li>
+          <li class="position__item"></li>
+          <li class="position__item"></li>
+          <li class="position__item position__item--current">04</li>
+          <li class="position__item"></li>
+          <li class="position__item"></li>
+        </ul>
+
+        <div class="price__side-soc side-soc">
+          <a class="side-soc__link" href="#">Instagram</a>
+          -
+          <a class="side-soc__link" href="#">Facebook</a>
+        </div>
       </section>
     </div>
   </body>
