Make footer - mobile

--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -573,6 +573,91 @@
           <a class="side-soc__link" href="#">Facebook</a>
         </div>
       </section>
+
+      <footer class="section footer">
+        <div class="container">
+          <h2 class="section__title">Свяжитесь со мной</h2>
+          <ul class="contacts">
+            <li class="contacts__item contact-item">
+              <span class="contact-item__text">Skype</span>
+              <span class="contact-item__slash">///</span>
+              <a class="contact-item__link" href="#" target="_blank">
+                daria.voronina
+              </a>
+            </li>
+            <li class="contacts__item contact-item">
+              <span class="contact-item__text">E-mail</span>
+              <span class="contact-item__slash">///</span>
+              <a
+                class="contact-item__link"
+                href="mailto:daria.voronina@gmail.com"
+              >
+                daria.voronina@gmail.com
+              </a>
+            </li>
+            <li class="contacts__item contact-item">
+              <span class="contact-item__text">Phone</span>
+              <span class="contact-item__slash">///</span>
+              <a class="contact-item__link" href="tel:+380554447799">
+                +38 055 444 77 99
+              </a>
+            </li>
+          </ul>
+          <ul class="social">
+            <li class="social__item">
+              <a href="#" target="_blank" aria-label="find me on facebook">
+                <picture>
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="img/icon-facebook-tablet.png"
+                  />
+                  <img
+                    class="social__img"
+                    src="img/icon-facebook-mobile.png"
+                    width="26"
+                    height="26"
+                    alt="facebook icon"
+                  />
+                </picture>
+              </a>
+            </li>
+            <li class="social__item">
+              <a href="#" target="_blank" aria-label="find me on instagram">
+                <picture>
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="img/icon-instagram-tablet.png"
+                  />
+                  <img
+                    class="social__img"
+                    src="img/icon-instagram-mobile.png"
+                    width="26"
+                    height="26"
+                    alt="instagram icon"
+                  />
+                </picture>
+              </a>
+            </li>
+            <li class="social__item">
+              <a href="#" target="_blank" aria-label="find me on pinterest">
+                <picture>
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="img/icon-pinterest-tablet.png"
+                  />
+                  <img
+                    class="social__img"
+                    src="img/icon-pinterest-mobile.png"
+                    width="26"
+                    height="26"
+                    alt="instagram icon"
+                  />
+                </picture>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
