Rename and refactor script

--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Voronina</title>
     <link rel="stylesheet" href="css/main.css" />
-    <script src="js/script.js" defer></script>
+    <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+      defer
+    ></script>
+    <script src="js/menu.js" defer></script>
   </head>
   <body>
     <div class="wrapper">
@@ -39,7 +43,7 @@
                 <a class="nav__link" href="#price">Стоимость</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#contacts">Контакты</a>
+                <a class="nav__link" href="#footer">Контакты</a>
               </li>
             </ul>
           </nav>
@@ -77,7 +81,7 @@
         </ul>
       </div>
 
-      <section class="section portfolio">
+      <section class="section portfolio" id="portfolio">
         <div class="container">
           <h2 class="section__title">Портфолио</h2>
           <div class="works">
@@ -325,7 +329,7 @@
         </div>
       </section>
 
-      <section class="section about">
+      <section class="section about" id="about">
         <div class="container">
           <h2 class="section__title">Обо мне</h2>
           <div class="about__content">
@@ -365,7 +369,7 @@
         </div>
       </section>
 
-      <section class="section price">
+      <section class="section price" id="price">
         <div class="container">
           <h2 class="section__title">Стоимость</h2>
           <ul class="plans">
@@ -566,7 +570,7 @@
         </div>
       </section>
 
-      <footer class="section footer">
+      <footer class="section footer" id="footer">
         <div class="container">
           <h2 class="section__title">Свяжитесь со мной</h2>
           <ul class="contacts">
