--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -10,6 +10,7 @@
       defer
     ></script>
     <script src="js/menu.js" defer></script>
+    <script src="js/smooth-scroll.js" defer></script>
   </head>
   <body>
     <div class="wrapper">
