Add state for interactive elements

--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -602,7 +602,12 @@
           </ul>
           <ul class="social">
             <li class="social__item">
-              <a href="#" target="_blank" aria-label="find me on facebook">
+              <a
+                class="social__link"
+                href="#"
+                target="_blank"
+                aria-label="find me on facebook"
+              >
                 <picture>
                   <source
                     media="(min-width: 768px)"
@@ -619,7 +624,12 @@
               </a>
             </li>
             <li class="social__item">
-              <a href="#" target="_blank" aria-label="find me on instagram">
+              <a
+                class="social__link"
+                href="#"
+                target="_blank"
+                aria-label="find me on instagram"
+              >
                 <picture>
                   <source
                     media="(min-width: 768px)"
@@ -636,7 +646,12 @@
               </a>
             </li>
             <li class="social__item">
-              <a href="#" target="_blank" aria-label="find me on pinterest">
+              <a
+                class="social__link"
+                href="#"
+                target="_blank"
+                aria-label="find me on pinterest"
+              >
                 <picture>
                   <source
                     media="(min-width: 768px)"
