Close mobile menu after link click

--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -35,16 +35,16 @@
             ></button>
             <ul class="nav__list">
               <li class="nav__item nav__item--portfolio">
-                <a class="nav__link" href="#portfolio">Портфолио</a>
+                <a class="nav__link js-nav-link" href="#portfolio">Портфолио</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#about">Обо мне</a>
+                <a class="nav__link js-nav-link" href="#about">Обо мне</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#price">Стоимость</a>
+                <a class="nav__link js-nav-link" href="#price">Стоимость</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#footer">Контакты</a>
+                <a class="nav__link js-nav-link" href="#footer">Контакты</a>
               </li>
             </ul>
           </nav>
