Implement functionality to side navigation

--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="site-top">
+      <div class="site-top" id="site-top">
         <header class="header">
           <picture class="header__logo logo">
             <source media="(min-width: 1400px)" srcset="img/logo-desktop.jpg" />
@@ -75,10 +75,18 @@
         </div>
 
         <ul class="site-top__position position">
-          <li class="position__item position__item--current">01</li>
-          <li class="position__item"></li>
-          <li class="position__item"></li>
-          <li class="position__item"></li>
+          <li class="position__item position__item--current">
+            <a class="position__link position__link--current">01</a>
+          </li>
+          <li class="position__item">
+            <a class="position__link" href="#portfolio">02</a>
+          </li>
+          <li class="position__item">
+            <a class="position__link" href="#about">03</a>
+          </li>
+          <li class="position__item">
+            <a class="position__link" href="#price">04</a>
+          </li>
         </ul>
       </div>
 
@@ -317,10 +325,18 @@
         </div>
 
         <ul class="portfolio__position position">
-          <li class="position__item"></li>
-          <li class="position__item position__item--current">02</li>
-          <li class="position__item"></li>
-          <li class="position__item"></li>
+          <li class="position__item">
+            <a class="position__link" href="#site-top">01</a>
+          </li>
+          <li class="position__item position__item--current">
+            <a class="position__link position__link--current">02</a>
+          </li>
+          <li class="position__item">
+            <a class="position__link" href="#about">03</a>
+          </li>
+          <li class="position__item">
+            <a class="position__link" href="#price">04</a>
+          </li>
         </ul>
 
         <div class="portfolio__side-soc side-soc">
@@ -357,10 +373,18 @@
         </div>
 
         <ul class="about__position position">
-          <li class="position__item"></li>
-          <li class="position__item"></li>
-          <li class="position__item position__item--current">03</li>
-          <li class="position__item"></li>
+          <li class="position__item">
+            <a class="position__link" href="#site-top">01</a>
+          </li>
+          <li class="position__item">
+            <a class="position__link" href="#portfolio">02</a>
+          </li>
+          <li class="position__item position__item--current">
+            <a class="position__link position__link--current">03</a>
+          </li>
+          <li class="position__item">
+            <a class="position__link" href="#price">04</a>
+          </li>
         </ul>
 
         <div class="about__side-soc side-soc">
@@ -558,10 +582,18 @@
         </div>
 
         <ul class="price__position position">
-          <li class="position__item"></li>
-          <li class="position__item"></li>
-          <li class="position__item"></li>
-          <li class="position__item position__item--current">04</li>
+          <li class="position__item">
+            <a class="position__link" href="#site-top">01</a>
+          </li>
+          <li class="position__item">
+            <a class="position__link" href="#portfolio">02</a>
+          </li>
+          <li class="position__item">
+            <a class="position__link" href="#about">03</a>
+          </li>
+          <li class="position__item position__item--current">
+            <a class="position__link position__link--current">04</a>
+          </li>
         </ul>
 
         <div class="price__side-soc side-soc">
